issue: Suppor issue creation at any page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6708,6 +6708,11 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     display: inline-block;
 }
 
+.width25px {
+    width: 25px;
+    display: inline-block;
+}
+
 #simple-issue-list {
     .state-label {
         font-size: 13px;
@@ -6920,4 +6925,8 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     font-size: 15px;
     color: rgba(0, 0, 0, 0.7);
     padding: 0 2px;
+}
+
+.no-margin {
+    margin: 0;
 }
