--- a/app/views/common/select2.scala.html
+++ b/app/views/common/select2.scala.html
@@ -34,12 +34,14 @@
 <script id="tplSelect2Projects" type="text/x-jquery-tmpl">
 <div class="usf-group" title="${name}">
     <span class="avatar-wrap smaller"><img src="${avatarURL}" width="16" height="16"></span>
+    <span class="loginid">${owner}</span>
     <span class="name">${name}</span>
 </div>
 </script>
 <script id="tplSelect2ProjectsWithoutAvatar" type="text/x-jquery-tmpl">
 <div class="usf-group" title="${name}">
-    <span class="width16px"></span>
+    <span class="width25px"></span>
+    <span class="loginid">${owner}</span>
     <span class="name">${name}</span>
 </div>
 </script>
