--- a/app/views/issue/partial_assignee.scala.html
+++ b/app/views/issue/partial_assignee.scala.html
@@ -23,4 +23,4 @@
     }
 }
 
-<input type="hidden" class="bigdrop" id="assignee" placeholder="@Messages("issue.noAssignee")" value="@assignee" style="width: 100%" title="">
+<input type="hidden" class="bigdrop" id="assignee" name="assigneeLoginId" placeholder="@Messages("issue.noAssignee")" value="@assignee" style="width: 100%" title="">
