--- a/app/views/issue/create.scala.html
+++ b/app/views/issue/create.scala.html
@@ -145,6 +145,7 @@
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.caret.min.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/lib/atjs/jquery.atwho.js")"></script>
 <script type="text/javascript" src="@routes.Assets.at("javascripts/common/yona.Subtask.js")"></script>
+<script type="text/javascript" src="@routes.Assets.at("javascripts/service/yona.issue.Assginee.js")"></script>
 <script type="text/javascript">
     $(function(){
         // yobi.issue.Write
@@ -166,6 +167,12 @@
         if(@isFromGlobalMenuNew) {
             $(".subtask-message").trigger("click");
         }
+
+        yonaAssgineeModule(
+                "@api.routes.IssueApi.findAssignableUsersOfProject(project.owner, project.name)",
+                "",
+                "@Messages("issue.assignee")"
+        );
     });
 </script>
 }
