--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -581,47 +581,50 @@ span.issue-label {
 .yobiToasts {
     position: fixed;
     overflow: hidden;
-    right: 0 !important;
-    top: 40px !important;
-    margin: 10px; width:340px;
-    z-index:990;
+    left: 20px !important;
+    top: 25px !important;
+    margin: 10px;
+    z-index:9999;
 
     .toast {
         position:relative;
-        display:inline-block;
-        width: 300px;
+        width: 450px;
         word-break: keep-all;
         word-wrap: break-word;
         margin: 10px;
-        padding: 10px;
+        padding: 10px 20px;
         outline:none;
         font-weight: bold;
+        box-sizing: border-box;
 
-        border: 2px solid @primary;
-        color: #222; background-color: #fff;
+        color: black;
+        background-color: #cddc39;
         -webkit-transition-duration: 0.3s;
+        box-shadow: 1px 1px 3px black;
 
-        .opacity(0);
+        .opacity(90);
         .border-radius(2px);
-        /*.box-shadow(0px 0px 5px rgba(240, 160, 132, 0.6));*/
 
         .btn-dismiss {
-            position:absolute;
-            top:5px; right:10px;
+            position: absolute;
+            top: 5px;
+            left: 420px;
             button {
-                color:@primary;
-                font-size:15px;
+                color: black;
+                font-size:25px;
                 font-weight:bold;
             }
         }
 
         .v {
             display:inline-block;
-            width:0px; height:50px;
+            width:0;
+            height:50px;
             vertical-align:middle;
         }
         .msg {
-            width:280px; font-size:15px;
+            width: 90%;
+            font-size:15px;
             display:inline-block;
             word-wrap: break-word;
             word-break:break-all;
