--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -31,6 +31,16 @@
     yobi.ShortcutKey.setKeymapLink({
       "N": "@routes.IssueApp.newIssueForm(project.owner, project.name)"
     });
+
+    var $titlePrefix = $(".title-prefix");
+    $titlePrefix
+            .on("mouseover", function (e) {
+              $(".title-prefix:contains('" + e.target.innerText + "')")
+                      .addClass("title-prefix-hover");
+            })
+            .on("mouseleave", function (e) {
+              $titlePrefix.removeClass("title-prefix-hover");
+            });
   });
 </script>
 }
