--- a/app/views/issue/my_list.scala.html
+++ b/app/views/issue/my_list.scala.html
@@ -8,7 +8,7 @@
 models.support.SearchCondition, project:Project)
 
 @import utils.MenuType._
-@siteLayout(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
+@siteLayout(Messages("issue.myIssue"), utils.MenuType.SITE_HOME) {
     <div>
         <button class="btn-transparent" id="toggleIntro"></button>
     </div>
