--- a/app/views/milestone/list.scala.html
+++ b/app/views/milestone/list.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2012 NAVER Corp.
-* http://yobi.io
-*
-* @author Tae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
 @(title: String, milestones: List[models.Milestone], project: Project, param: MilestoneApp.MilestoneCondition)
 @import scala.collection.immutable._
@@ -41,7 +27,7 @@
 	)
 }
 
-@projectLayout(title, project, utils.MenuType.MILESTONE) {
+@projectLayout(project.name + " - " + title, project, utils.MenuType.MILESTONE) {
 @projectMenu(project, utils.MenuType.MILESTONE, "")
 <div class="page-wrap-outer">
     <div class="project-page-wrap">
