--- a/app/views/user/userFiles.scala.html
+++ b/app/views/user/userFiles.scala.html
@@ -28,7 +28,7 @@
     }
 }
 
-@siteLayout(utils.Config.getSiteName, SITE_HOME) {
+@siteLayout(Messages("user.files"), SITE_HOME) {
     <link rel="stylesheet" type="text/css" media="all" href="@routes.Assets.at("stylesheets/filetype.css")">
     <div>
         <button class="btn-transparent" id="toggleIntro"></button>
