--- a/app/views/issue/list.scala.html
+++ b/app/views/issue/list.scala.html
@@ -8,7 +8,7 @@
 @import models.support.SearchCondition
 @(title: String, currentPage: Page[Issue], param: SearchCondition, project:Project)
 
-@projectLayout(Messages(title), project, utils.MenuType.ISSUE){
+@projectLayout(project.name + " - " + Messages(title), project, utils.MenuType.ISSUE){
 @projectMenu(project, utils.MenuType.ISSUE, "main-menu-only")
 <link rel="stylesheet" href="@routes.IssueLabelApp.labelStyles(project.owner, project.name)" type="text/css" />
 <div class="page-wrap-outer">
