--- a/app/views/project/home.scala.html
+++ b/app/views/project/home.scala.html
@@ -18,7 +18,7 @@
     if (tab == tabId) {"active"}
 }
 
-@projectLayout(project.name + " |:| " + project.overview, project, utils.MenuType.PROJECT_HOME) {
+@projectLayout(project.name + " - " + Messages("menu.home") + " |:| " + project.overview, project, utils.MenuType.PROJECT_HOME) {
 @projectMenu(project, utils.MenuType.PROJECT_HOME, "")
 <div class="page-wrap-outer">
     <div class="project-page-wrap">
