--- a/app/views/projectLayout.scala.html
+++ b/app/views/projectLayout.scala.html
@@ -1,28 +1,23 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author JiHan Kim
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
+@import org.apache.commons.lang3.StringUtils
 @(title:String, project:Project, menuType:utils.MenuType)(content: Html)
 
 @import utils._
 
-@layout(Messages(title) + " - " + project.owner + "/" + project.name)("prj") {
+@titleText = @{
+    if(StringUtils.isBlank(title)) {
+        project.name + " - " + project.owner
+    } else {
+        Messages(title) + " - " + project.owner + "/" + project.name
+    }
+}
+
+@layout(titleText)("prj") {
     @common.navbar(menuType, project, null)
     
     @views.html.project.header(project)
