--- a/app/views/reviewthread/list.scala.html
+++ b/app/views/reviewthread/list.scala.html
@@ -28,7 +28,7 @@
 @paramForParticipant = { @CommentThread.countReviewsBy(project.id, param.clone.setAuthorId(null).setParticipantId(UserApp.currentUser().id)) }
 @paramForAuthor = { @CommentThread.countReviewsBy(project.id, param.clone.setParticipantId(null).setAuthorId(UserApp.currentUser().id)) }
 
-@projectLayout(Messages("menu.review"), project, utils.MenuType.PROJECT_REVIEW) {
+@projectLayout(project.name + " - " + Messages("menu.review"), project, utils.MenuType.PROJECT_REVIEW) {
     @projectMenu(project, utils.MenuType.PROJECT_REVIEW, "")
 
 <div class="project-page-wrap">
