css: Change view buttons to icons

--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -205,10 +205,13 @@ input[type=number]::-webkit-outer-spin-button {
 .mb20 { margin-bottom:20px; }
 .mr20 { margin-right:20px; }
 .ml5 { margin-left:5px; }
+.ml6 { margin-left:6px; }
+.mr6 { margin-right:6px; }
 .mr5 { margin-right:5px; }
 .mt5 { margin-top:5px; }
 .mt4 { margin-top:4px; }
 .mr3 { margin-right:3px; }
+.pb4 { padding-bottom: 4px}
 
 .margin-top-20   { margin-top:20px;   }
 .margin-left-20  { margin-left: 20px; }
