--- a/app/views/issue/partial_voters.scala.html
+++ b/app/views/issue/partial_voters.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2014 NAVER Corp.
-* http://yobi.io
-*
-* @author Jihan Kim
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
 @(issue:models.Issue, numOfAvatars:Int = 3, numOfNames:Int = 5)
 
@@ -25,12 +11,12 @@
 <div class="voter-list-wrap">
     <ul class="voter-list">
         @if(issue.isVotedBy(UserApp.currentUser)){
-            <li>@Html(getUserAvatar(UserApp.currentUser, "medium"))</li>
+            <li>@Html(getUserAvatar(UserApp.currentUser, "smaller"))</li>
         }
 
         @defining(VoteApp.getVotersExceptCurrentUser(issue.voters)) { issueVoters =>
             @for(voter <- VoteApp.getVotersForAvatar(issueVoters, numOfAvatars)) {
-                <li>@Html(getUserAvatar(voter, "medium"))</li>
+                <li>@Html(getUserAvatar(voter, "smaller"))</li>
             }
             @if(issueVoters.size > numOfAvatars) {
                 <li data-toggle="tooltip" data-html="true"
