my-issues: Change margin size

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6963,3 +6963,16 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .no-margin {
     margin: 0;
 }
+
+.my-issues {
+    .post-item {
+        padding: 6px 10px;
+      
+        .title-wrap {
+            margin-top: 2px;
+        }
+        .infos {
+            margin-top: 4px;
+        }
+    }
+}
