--- a/app/views/board/view.scala.html
+++ b/app/views/board/view.scala.html
@@ -13,6 +13,8 @@
 @import models.enumeration._
 @import play.libs.Json.toJson
 @import utils.Markdown
+@import controllers.api.IssueApi
+
 @implicitField = @{ helper.FieldConstructor(simpleForm) }
 
 @urlToPostings = @{
@@ -97,6 +99,9 @@
                         </div>
                     </div>
 
+                    @if(StringUtils.isNotBlank(IssueApi.TRANSLATION_API)){
+                        <button class="ybtn" id="translate">@Messages("button.translation")</button>
+                    }
                     <a href="@urlToPostings" class="ybtn" data-button="historyBack"><i class="yobicon-angle-left"></i> @Messages("button.list")</a>
                     @if(isAllowed(UserApp.currentUser(), post.asResource(), Operation.DELETE)) {
                             <a href="#deleteConfirm" data-toggle="modal" class="ybtn ybtn-danger">@Messages("button.delete")</a>
@@ -225,6 +230,44 @@
                 }, 1000);
             });
             watcherListApi(watcherApiUrl);
+
+            $('#translate').one('click', function (e) {
+                var data = {
+                    owner: "@project.owner",
+                    projectName: "@project.name",
+                    type: "posting",
+                    number: "@post.getNumber"
+                };
+                $.ajax({
+                    url: "/-_-api/v1/translation",
+                    data: JSON.stringify(data),
+                    type: "POST",
+                    dataType: "json",
+                    contentType: "application/json"
+                }).done(function (data) {
+                    $(".markdown-wrap").first().html(data.translated);
+                    $(this).attr("disabled", true);
+                });
+            });
+
+            $('.comment-translate').one('click', function (e) {
+                var payload = {
+                    owner: "@project.owner",
+                    projectName: "@project.name",
+                    type: "post-comment",
+                    number: $(this).data("commentId")
+                };
+                $.ajax({
+                    url: "/-_-api/v1/translation",
+                    data: JSON.stringify(payload),
+                    type: "POST",
+                    dataType: "json",
+                    contentType: "application/json"
+                }).done(function (data) {
+                    $("#comment-body-" + payload.number).find(".markdown-wrap").html(data.translated)
+                    $(this).attr("disabled", true);
+                });
+            });
         });
 </script>
 @common.select2()
