--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2741,7 +2741,7 @@ label.inline-list {
 
 .board-body {
     .author-info {
-        display:inline-block;
+        display:block;
         margin:10px 20px;
     }
 
