--- a/app/views/git/view.scala.html
+++ b/app/views/git/view.scala.html
@@ -36,7 +36,7 @@
         @partial_info(project, pull, "overview")
 
         <div class="board-body">
-            <div class="author-info right-txt" style="margin-top:20px;">
+            <div class="author-info left-txt" style="margin-top:20px;">
                 <a href="@routes.UserApp.userInfo(pull.contributor.loginId)" class="usf-group pull-left">
                     <span class="avatar-wrap smaller">
                         <img src="@pull.contributor.avatarUrl" width="32" height="32">
