Webhook: Add webhook support for Slack
When
---
- new pull request
- pull request state changed
- pull request merged
- pull request commit changed
- issue body changed
- issue moved
- assignee changed
- new comment

And..
---
- Provide option for commit only

--- a/app/views/project/webhooks.scala.html
+++ b/app/views/project/webhooks.scala.html
@@ -36,6 +36,8 @@
           <div>
             <input type="text" name="payloadUrl" class="input-webhook-payload" maxlength="2000" autocomplete="off" placeholder="@Messages("project.webhook.payloadUrl")">
             <input type="text" name="secret" class="input-webhook-secret" maxlength="250" autocomplete="off" placeholder="@Messages("project.webhook.secret")">
+            <label for="gitPushOnly">@Messages("project.webhook.gitPushOnly")</label>
+            <input type="checkbox" id="gitPushOnly" name="gitPushOnly" class="form-check-input">
           </div>
         </div>
         <button type="submit" class="ybtn ybtn-primary btn-submit">@Messages("project.webhook.add")</button>
