--- a/app/views/user/partial_issues.scala.html
+++ b/app/views/user/partial_issues.scala.html
@@ -94,10 +94,14 @@
             @if(issue.dueDate != null) {
             <div class="mr20 mt10 pull-right @if(issue.isOverDueDate) {overdue}" data-toggle="tooltip" data-placement="top" title="@issue.getDueDateString">
                 <i class="yobicon-clock2"></i>
-                @if(issue.isOverDueDate) {
-                    @Messages("issue.dueDate.overdue")
+                @if(issue.isOpen) {
+                    @if(issue.isOverDueDate) {
+                        @Messages("issue.dueDate.overdue")
+                    } else {
+                        @issue.until
+                    }
                 } else {
-                    @issue.until
+                    @issue.getDueDateString
                 }
             </div>
         </div>
