--- a/app/views/index/notifications.scala.html
+++ b/app/views/index/notifications.scala.html
@@ -10,7 +10,7 @@
 @import utils.JodaDateUtil
 @import utils.MenuType._
 
-@siteLayout(Messages("notification"), utils.MenuType.SITE_HOME) {
+@siteLayout(utils.Config.getSiteName, utils.MenuType.SITE_HOME) {
     @if(currentUser == User.anonymous){
     @partial_intro()
     } else {
