--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -159,6 +159,7 @@ code {
     border:1px solid rgba(0,0,0,0.1);
     .box-shadow(2px 2px 5px rgba(0,0,0,0.15));
     .box-sizing(border-box);
+    max-height: 300px;
   }
 
   ul {
